maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:4: error: not found: value DirectionNord
    setDirection(DirectionNord) 
                 ^