maze.island.IslandMaze.scala.code
override def run() {
  while(!estSurBiscuit())
  	setDirection(DirectionNord) 
  	if (estFaceMur)
  		longeGch()
  	else(avance())
  prendBiscuit()
}

def longeGch(){
  gauche()
  if(!estFaceMur())
    avance()
  else {
    droite()
    while(estFaceMur())
      droite()
    avance()
       }
}
